# clipboard-investigator

./: .gitignore  README.md
.github/workflows/: build.yml
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
