[package]
name = "clipboard-investigator"
version = "0.1.0"
description = "Clipboard Investigator"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3.1", features = ["tray-icon", "image-png"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22"
windows = { version = "0.58", features = [
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_Foundation",
] }
